// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<tr>
  <td>
    <strong>
      total
    </strong>
  </td>
  <td
    className="thin nowrap text-right"
  >
    <ForwardRef(Link)
      to={
        {
          "pathname": "/coding_rules",
          "search": "?qprofile=bar&activation=true",
        }
      }
    >
      <strong>
        3
      </strong>
    </ForwardRef(Link)>
  </td>
  <td
    className="thin nowrap text-right"
  >
    <ForwardRef(Link)
      className="small"
      to={
        {
          "pathname": "/coding_rules",
          "search": "?qprofile=bar&activation=false",
        }
      }
    >
      <strong>
        7
      </strong>
    </ForwardRef(Link)>
  </td>
</tr>
`;

exports[`should render correctly if there is 0 rules 1`] = `
<tr>
  <td>
    <strong>
      total
    </strong>
  </td>
  <td
    className="thin nowrap text-right"
  >
    <ForwardRef(Link)
      to={
        {
          "pathname": "/coding_rules",
          "search": "?qprofile=bar&activation=true",
        }
      }
    >
      <strong>
        0
      </strong>
    </ForwardRef(Link)>
  </td>
  <td
    className="thin nowrap text-right"
  >
    <span
      className="note"
    >
      0
    </span>
  </td>
</tr>
`;

exports[`should render correctly if there is missing data 1`] = `
<tr>
  <td>
    <strong>
      total
    </strong>
  </td>
  <td
    className="thin nowrap text-right"
  >
    <ForwardRef(Link)
      to={
        {
          "pathname": "/coding_rules",
          "search": "?qprofile=bar&activation=true",
        }
      }
    >
      <strong>
        5
      </strong>
    </ForwardRef(Link)>
  </td>
  <td
    className="thin nowrap text-right"
  />
</tr>
`;

exports[`should render correctly if there is missing data 2`] = `
<tr>
  <td>
    <strong>
      total
    </strong>
  </td>
  <td
    className="thin nowrap text-right"
  />
  <td
    className="thin nowrap text-right"
  />
</tr>
`;
